# aoc2022

./: Cargo.toml  README.md
misc/: aoc2022_letters.ods
src/: lib.rs
src/utils/: mod.rs
src/utils/cartography/: cardinaldirection.rs  compassdirection.rs  minmax2d.rs  minmax3d.rs  mod.rs  point2d.rs  point3d.rs
src/utils/wildlife/: mod.rs  monkey.rs
template/: day00.rs
